--- a/interface/src/interface/package.json
+++ b/interface/src/interface/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.27.1",
+    "bootstrap": "^5.2.0-beta1",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "vue": "^2.7.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
